deploy/retrieveUnpackaged/objects/Close_Opportunity_Wizard_Properties__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Account_Account_Id__c</fullName>
        <label>Account Account Id</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_CORE_Account_number__c</fullName>
        <inlineHelpText>Appropriate values are &quot;Displayed&quot; or blank. 
This controls if the field is displayed on the Close Opportunity Wizard</inlineHelpText>
        <label>Account Account Num</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Market_Sector__c</fullName>
        <inlineHelpText>Appropriate values are &quot;Displayed&quot;, &quot;Required&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Account Market Sector</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <inlineHelpText>Appropriate values are &quot;Displayed&quot;, &quot;Required&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Account Name</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Service_Level__c</fullName>
        <label>Account Service Level</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Sub_Type__c</fullName>
        <inlineHelpText>Appropriate values are &quot;Displayed&quot;, &quot;Required&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Account_Sub Type</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Support_Office__c</fullName>
        <inlineHelpText>Appropriate values are &quot;Displayed&quot;, &quot;Required&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Account_Support Office</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Support_Segment__c</fullName>
        <inlineHelpText>Appropriate values are &quot;Displayed&quot;, &quot;Required&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Account Support Segment</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Tax_ID__c</fullName>
        <inlineHelpText>Appropriate values are &quot;Displayed&quot;, &quot;Required&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Account Tax ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Registration_Number__c</fullName>
        <label>Company Registration Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Final_Close_Redirect_to_Custom_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Final Close Redirect to Custom URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type_Id__c</fullName>
        <label>Opportunity Record Type Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Oppty_Additional_Prods__c</fullName>
        <label>Oppty Additional Prods</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Amount__c</fullName>
        <label>Oppty_Amount</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_C_Deal_Justification__c</fullName>
        <inlineHelpText>Appropriate values are &quot;&quot;Displayed&quot;&quot;, &quot;&quot;Required&quot;&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Oppty C Deal Justification</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Category__c</fullName>
        <label>Oppty Category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Close_Date__c</fullName>
        <label>Oppty Close Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Cloud_Setup_Fees__c</fullName>
        <inlineHelpText>Appropriate values are &quot;&quot;Displayed&quot;&quot;, &quot;&quot;Required&quot;&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Oppty Cloud Setup Fees</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Cloud_Username__c</fullName>
        <label>Oppty Cloud Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Contract_Length__c</fullName>
        <inlineHelpText>Appropriate values are &quot;&quot;Displayed&quot;&quot;, &quot;&quot;Required&quot;&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Oppty Contract Length</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Credit_Card_ACH__c</fullName>
        <label>Oppty Credit Card/ACH</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Currency__c</fullName>
        <inlineHelpText>Appropriate values are &quot;&quot;Displayed&quot;&quot;, &quot;&quot;Required&quot;&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Oppty Currency</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_DDI__c</fullName>
        <label>Oppty DDI #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Data_Center__c</fullName>
        <inlineHelpText>Appropriate values are &quot;&quot;Displayed&quot;&quot;, &quot;&quot;Required&quot;&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Oppty Data Center</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_EVA_Grade__c</fullName>
        <inlineHelpText>Appropriate values are &quot;&quot;Displayed&quot;&quot;, &quot;&quot;Required&quot;&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Oppty EVA Grade</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_EVA_Ratio__c</fullName>
        <label>Oppty EVA Ratio</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Equifax_Grade__c</fullName>
        <inlineHelpText>Appropriate values are &quot;&quot;Displayed&quot;&quot;, &quot;&quot;Required&quot;&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Oppty Equifax Grade</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Exchange_Fee__c</fullName>
        <inlineHelpText>Appropriate values are &quot;&quot;Displayed&quot;&quot;, &quot;&quot;Required&quot;&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Oppty Exchange Fee</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Final_Opportunity_Type__c</fullName>
        <label>Oppty Final Opportunity Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Hosting_Fee__c</fullName>
        <inlineHelpText>Appropriate values are &quot;&quot;Displayed&quot;&quot;, &quot;&quot;Required&quot;&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Oppty Hosting Fee</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Migration_Fees__c</fullName>
        <inlineHelpText>Appropriate values are &quot;&quot;Displayed&quot;&quot;, &quot;&quot;Required&quot;&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Oppty Migration Fees</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Mosso_Fees__c</fullName>
        <inlineHelpText>Appropriate values are &quot;&quot;Displayed&quot;&quot;, &quot;&quot;Required&quot;&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Oppty Mosso Fees</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Overlay_Prods__c</fullName>
        <label>Oppty Overlay Prods</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Practice_Area__c</fullName>
        <inlineHelpText>Appropriate values are &quot;&quot;Displayed&quot;&quot;, &quot;&quot;Required&quot;&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Oppty Practice Area</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Prepay_Amount__c</fullName>
        <inlineHelpText>Appropriate values are &quot;&quot;Displayed&quot;&quot;, &quot;&quot;Required&quot;&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Oppty Prepay Amount</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Sales_Opportunity__c</fullName>
        <inlineHelpText>Appropriate values are &quot;&quot;Displayed&quot;&quot;, &quot;&quot;Required&quot;&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Oppty Sales Opportunity</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Service_Fees_MRR__c</fullName>
        <inlineHelpText>Appropriate values are &quot;&quot;Displayed&quot;&quot;, &quot;&quot;Required&quot;&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Oppty Service Fees MRR</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Service_Fees__c</fullName>
        <inlineHelpText>Appropriate values are &quot;&quot;Displayed&quot;&quot;, &quot;&quot;Required&quot;&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Oppty Service Fees</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Service_Offering__c</fullName>
        <inlineHelpText>Appropriate values are &quot;&quot;Displayed&quot;&quot;, &quot;&quot;Required&quot;&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Oppty Service  Offering</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Setup_Fee__c</fullName>
        <inlineHelpText>Appropriate values are &quot;&quot;Displayed&quot;&quot;, &quot;&quot;Required&quot;&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Oppty Setup Fee</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Silver_Bullet__c</fullName>
        <inlineHelpText>Appropriate values are &quot;&quot;Displayed&quot;&quot;, &quot;&quot;Required&quot;&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Oppty Silver Bullet</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Slicehost_Fees__c</fullName>
        <inlineHelpText>Appropriate values are &quot;&quot;Displayed&quot;&quot;, &quot;&quot;Required&quot;&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Oppty Slicehost Fees</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Territory__c</fullName>
        <inlineHelpText>Appropriate values are &quot;&quot;Displayed&quot;&quot;, &quot;&quot;Required&quot;&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Oppty Territory</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_Ticket_Number__c</fullName>
        <inlineHelpText>Appropriate values are &quot;&quot;Displayed&quot;&quot;, &quot;&quot;Required&quot;&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Oppty Ticket Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_UNAS_Fees__c</fullName>
        <inlineHelpText>Appropriate values are &quot;&quot;Displayed&quot;&quot;, &quot;&quot;Required&quot;&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Oppty UNAS Fees</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oppty_VM_Fees__c</fullName>
        <inlineHelpText>Appropriate values are &quot;&quot;Displayed&quot;&quot;, &quot;&quot;Required&quot;&quot;, or blank. 
This controls if the field is displayed and/or required on the Close Opportunity Wizard</inlineHelpText>
        <label>Oppty VM Fees</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Order__c</fullName>
        <defaultValue>&quot;1;2;3;4&quot;</defaultValue>
        <inlineHelpText>Use this field to tell the wizard what pages to render and in what order.
You must always include page 4 at the end.
The format is &quot;1;2;3;4&quot; to show page 1 than 2 than 3 than 4</inlineHelpText>
        <label>Page Order</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Close Opportunity Wizard Properties</label>
</CustomObject>